[metadata]
name = xemeler
version = attr: xemeler.__version__
author = Ilya Antonov
author_email = ispanelki@gmail.com
description = The best way to work with XML in Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    xml
# license = MIT License
license_files = LICENSE
url = https://github.com/ispaneli/xemeler
project_urls =
    Issue Tracker = https://github.com/ispaneli/xemeler/issues
    Source = https://github.com/ispaneli/xemeler/tree/master/src/xemeler
    Say Thanks! = http://saythanks.io/to/ispanelki
    Documentation = https://github.com/ispaneli/xemeler
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8, <4
# install_requires =

[options.packages.find]
where = src